# ai-powered-web-scraper-summerizer

./: .gitignore  pyproject.toml  readme.md  script.ipynb
