[tool.poetry]
name = "ai-powered-web-scraper"
version = "0.1.0"
description = "This is an AI-powered web scraper and summarizer built by Krishna Prasad Khanal. It uses OpenAI and Python."
authors = ["Krishna Prasad Khanal <krishnaamen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^2.8.1"
python-dotenv = "^1.2.1"
ipython = "^9.8.0"
beautifulsoup4 = "^4.14.3"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
